log/build_2023-05-31_00-52-24/abu_package/stderr.log
  File "/home/poomnuc/abu_ws/install/abu_package/lib/python3.8/site-packages/abu_package/ps4.py", line 199
    if(abs(control) > 0.2:
                         ^
SyntaxError: invalid syntax

